<resources>
    <string name="app_name">LoopTestDev</string>
    <string name="title">无负荷计量回路接线检查仪</string>
    <string name="login_title">用户登录</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="btn_login">登录</string>
    <string name="baseTitle">标题</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="input_admin">请输入管理员账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="search_devices">搜索设备</string>
    <string name="stop_search">停止搜索</string>
    <string name="paired_devices">已配对设备</string>
    <string name="new_devices">未配对设备</string>
</resources>
