<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_custom_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="提醒"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_marginTop="@dimen/dp_10"/>

           <EditText
               android:id="@+id/et_admin_custom_dialog"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_edit"
               android:layout_marginVertical="@dimen/dp_10"
               android:hint="@string/input_admin"
               android:padding="@dimen/dp_10"
               android:layout_marginHorizontal="@dimen/dp_10"/>

            <EditText
                android:id="@+id/et_password_custom_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/dp_10"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_negative_custom_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_blue_dark" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#dfdfdf" />

            <Button
                android:id="@+id/btn_positive_custom_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/ok"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
